# sda-ml

./: .gitignore  LICENSE  README.md
doc/: Presentation_Notes.md
exp/: one_test_elm.ipynb  pyproject.toml
sda-ml/: hello.py  pyproject.toml
sda-ml/sda-ml/: elm_iod.html  elm_iod.ipynb
sda-ml/sda-ml/data/: dataclass.py  experiment.py  generator.py  geo_astro.py
sda-ml/sda-ml/experiment/: constants.py
sda-ml/sda-ml/ml/: data.py  model.py
